changed all occurrences of new XXX to XXX.valueOf for boxed numeric types XXX